# robotics

./: usefulTools.txt
catkin_ws/: ciao.txt
catkin_ws/src/custom_messages/: package.xml
catkin_ws/src/custom_messages/src/: pub.cpp
catkin_ws/src/message_filters/src/: pub.cpp  sub.cpp
catkin_ws/src/parameter_test/parameter_test/launch/: param_set.launch  param_set_double.launch
catkin_ws/src/parameter_test/parameter_test/src/: param_first.cpp  param_second.cpp
catkin_ws/src/pub_sub/: CMakeLists.txt  package.xml
catkin_ws/src/pub_sub/launch/: multi_turtle.launch  simple_launch.launch  simple_launch_namespace.launch
catkin_ws/src/pub_sub/src/: pub.cpp  sub.cpp
catkin_ws/src/pub_sub_same/src/: test_sub.cpp
catkin_ws/src/service/: CMakeLists.txt  package.xml
catkin_ws/src/tf/launch/: turtle.launch
catkin_ws/src/tf/src/: pub.cpp
catkin_ws/src/timer/: package.xml
catkin_ws/src/timer/src/: pub.cpp
catkin_ws/tf/launch/: turtle.launch
catkin_ws/tf/src/: get_tf.cpp
data/: 2025-04-02-19-58-10.bag
